# synchttp

./: Cargo.toml  PLAN.md  README.md  flake.nix
benches/: perf.rs
examples/: simple_server.rs  state_server.rs
proptest-regressions/: parse.txt
src/: body.rs  conn.rs  lib.rs  parse.rs  response.rs  router.rs  server.rs  types.rs
tests/: server.proptest-regressions  server.rs
